--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html><body><figure class="figure" id="map--figure">
-<figcaption class="map__caption">Cycle 202 Healthy Start Uptake </figcaption>
+<figcaption class="map__caption">Map Healthy Start in England (15 Oct 11 Nov 2018)</figcaption>
 <div class="map_container">
 <style type="text/css">
 	#map--map, #map--legend-horizontal {
