Update and rename cycle201.html to cycle203.html

--- a/cycle203.html
+++ b/cycle203.html
@@ -30,5 +30,5 @@
 </div></div><footer class="figure__footer">
 </footer>
 </figure>
-<a href="https://department-of-health.github.io/Healthy-Start-Data">Current Map/</a>
+<a href="https://department-of-health.github.io/Healthy-Start-Data">Current Map</a>
 </body></html>
