--- a/previousmaps.html
+++ b/previousmaps.html
@@ -3,5 +3,6 @@
 <ul>
 <li><a href="https://department-of-health.github.io/Healthy-Start-Data">Current Map</a></li>
 <li><a href="https://department-of-health.github.io/Healthy-Start-Data/cycle203">12 November - 9 December 2018</a></li>
+<li><a href="https://department-of-health.github.io/Healthy-Start-Data/cycle202">15 October - 11 November 2018</a></li>
 </ul>
 </body></html>
