--- a/previousmaps.html
+++ b/previousmaps.html
@@ -1,5 +1,5 @@
 <html><body>
-  <h2>Historic maps of Healthy Start uptake</h2> 
+  <h2>Maps of Healthy Start Uptake</h2> 
 <ul>
 <li><a href="https://department-of-health.github.io/Healthy-Start-Data">Current Map</a></li>
 <li><a href="https://department-of-health.github.io/Healthy-Start-Data/cycle203">12 November - 9 December 2018</a></li>
