--- a/index.html
+++ b/index.html
@@ -29,5 +29,5 @@
 </div></div><footer class="figure__footer">
 </footer>
 </figure>
-<a href="https://department-of-health.github.io/Healthy-Start-Data/previousmaps.html">Previous Maps</a
+<a href="https://department-of-health.github.io/Healthy-Start-Data/previousmaps.html">Previous Maps</a>
 </body></html>
