Update and rename Map of Healthy Start Uptake in English and Welsh Local Authorities (3).html to index.html

--- a/index.html
+++ b/index.html
@@ -31,4 +31,5 @@
 <p class="figure__source">Source: <a href="ons.gov.uk">ons</a></p>
 </footer>
 </figure>
+<a href="https://department-of-health.github.io/Healthy-Start-Data/previousmaps.html">Previous Maps</a>
 </body></html>
