--- a/previousmaps.html
+++ b/previousmaps.html
@@ -2,6 +2,7 @@
   <h2>Maps of Healthy Start Uptake</h2> 
 <ul>
 <li><a href="https://department-of-health.github.io/Healthy-Start-Data">Current Map</a></li>
+<li><a href="https://department-of-health.github.io/Healthy-Start-Data/cycle206">04th February 2019 - 03rd March 2019</a></li>
 <li><a href="https://department-of-health.github.io/Healthy-Start-Data/cycle205">07th January 2019 - 03rd February 2019</a></li>
 <li><a href="https://department-of-health.github.io/Healthy-Start-Data/cycle204">10 December 2018 - 6 January 2019</a></li>
 <li><a href="https://department-of-health.github.io/Healthy-Start-Data/cycle203">12 November - 9 December 2018</a></li>
