--- a/previousmaps.html
+++ b/previousmaps.html
@@ -2,6 +2,9 @@
   <h2>Maps of Healthy Start Uptake</h2> 
 <ul>
 <li><a href="https://department-of-health.github.io/Healthy-Start-Data">Current Map</a></li>
+<li><a href="https://department-of-health.github.io/Healthy-Start-Data/cycle212">19 August 2019 - 15 September 2019</a></li>
+<li><a href="https://department-of-health.github.io/Healthy-Start-Data/cycle211">24 June 2019 - 21 July 2019</a></li>
+<li><a href="https://department-of-health.github.io/Healthy-Start-Data/cycle210">27 May 2019 - 23 June 2019</a></li>
 <li><a href="https://department-of-health.github.io/Healthy-Start-Data/cycle209">29 April 2019 - 26 May 2019</a></li>
 <li><a href="https://department-of-health.github.io/Healthy-Start-Data/cycle208">01 April 2019 - 28 April 2019</a></li>
 <li><a href="https://department-of-health.github.io/Healthy-Start-Data/cycle207">04 March 2019 - 31 March 2019</a></li>
